--- a/index.html
+++ b/index.html
@@ -66,7 +66,19 @@
                     <button type="button">Go 🚀</button>
                 </div>
             </div>
+
+            <div class="form">
+                <label for="guessField">Enter a guess: </label>
+                <input type="text" id="guessField" class="guessField">
+                <input type="submit" value="Submit guess" class="guessSubmit">
+              </div>
     </div>       
+
+    <div class="form">
+  <label for="guessField">Enter a guess: </label>
+  <input type="text" id="guessField" class="guessField">
+  <input type="submit" value="Submit guess" class="guessSubmit">
+</div>
 
     <div class="padRight"> 
     </div>
